# cr_dvrk_ws

./: .gitignore  README  cisstLog-2025-09-12-19-13-09.txt  cisstLog-2025-09-12-19-13-41.txt  cisstLog-2025-09-12-19-14-25.txt  cisstLog.txt  requirements.txt
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cisst/include/: cisstCommonXML.h  cisstMesh.h  cisstMultiTask.h  cisstMultiTaskQt.h  cisstOSAbstraction.h  cisstRevision.h  cisstVector.h  cisstVectorQt.h
install/cisst/lib/: cisstParameterTypesPython.py  libcisstCommon.so.1.3.1  libcisstCommonQt.so.1.3.1  libcisstCommonXML.so.1.3.1  libcisstMesh.so.1.3.1  libcisstMultiTaskQt.so.1.3.1  libcisstNumerical.so.1.3.1  libcisstOSAbstraction.so.1.3.1  libcisstParameterTypes.so.1.3.1  libcisstParameterTypesQt.so.1.3.1  libcisstRobot.so.1.3.1  libcisstVector.so.1.3.1  libcisstVectorQt.so.1.3.1  libsawControllers.so.2.2.0  libsawControllersQt.so.2.2.0  libsawIntuitiveResearchKit.so.2.3.1  libsawIntuitiveResearchKitQt.so.2.3.1  libsawKeyboard.so.1.4.0  libsawRobotIO1394.so.2.3.0  libsawRobotIO1394Qt.so.2.3.0  libsawTextToSpeech.so.1.4.0
log/: latest_build
src/ctr_teleop/: package.xml  setup.cfg  setup.py
src/ctr_teleop/ctr_teleop_python/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/ctr_teleop/ctr_teleop_python/scripts/: ctr_state_info.py  enable_ctr_teleop.py
src/ctr_teleop/ctr_teleop_python/src/ctr_teleop/: __init__.py  ctr_fourier_kinematics.py  fparams_file.mat  fparams_file_Xu2025.mat  tip_position_control.py
src/tdcr_teleop/: package.xml  setup.cfg  setup.py
(+963 files in other folders)
